// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standard field metadata update should be ignored when trying to update isLabelSyncedWithName on standard field 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FIELD_MUTATION_NOT_ALLOWED",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Cannot edit standard field metadata properties: isLabelSyncedWithName",
  "name": "ForbiddenError",
}
`;

exports[`Standard field metadata update should be ignored when trying to update name on standard field 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FIELD_MUTATION_NOT_ALLOWED",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Cannot edit standard field metadata properties: name",
  "name": "ForbiddenError",
}
`;

exports[`Standard field metadata update should be ignored when trying to update several forbidden properties 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FIELD_MUTATION_NOT_ALLOWED",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Cannot edit standard field metadata properties: isLabelSyncedWithName, name",
  "name": "ForbiddenError",
}
`;
